4.2/api/phalcon_image/index.md
---
title: "Phalcon Image"
version: "4.2"
---

> Documentation Index
> Fetch the complete documentation index at: https://docs.phalcon.io/llms.txt
> Use this file to discover all available pages before exploring further.

# Phalcon Image

:::info[NOTE]
All classes are prefixed with `Phalcon`
:::

## Image\Adapter\AbstractAdapter ![Abstract](/assets/images/abstract-green.svg) 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Adapter/AbstractAdapter.zep)

-   __Namespace__

    - `Phalcon\Image\Adapter`

-   __Uses__

    - `Phalcon\Image\Enum`
    - `Phalcon\Image\Exception`

-   __Extends__

-   __Implements__

    - `AdapterInterface`

All image adapters must use this class

### Properties
```php
//
protected $static $checked = false;

//
protected $file;

/**
 * Image height
 *
 * @var int
 */
protected $height;

//
protected $image;

/**
 * Image mime type
 *
 * @var string
 */
protected $mime;

//
protected $realpath;

/**
 * Image type
 *
 * Driver dependent
 *
 * @var int
 */
protected $type;

/**
 * Image width
 *
 * @var int
 */
protected $width;

```

### Methods

```php
public function background( string $color, int $opacity = int ): AdapterInterface;
```
 Set the background color of an image

```php
public function blur( int $radius ): AdapterInterface;
```
 Blur image

```php
public function crop( int $width, int $height, int $offsetX = null, int $offsetY = null ): AdapterInterface;
```
 Crop an image to the given size

```php
public function flip( int $direction ): AdapterInterface;
```
 Flip the image along the horizontal or vertical axis

```php
public function getHeight(): int;
```

```php
public function getImage();
```

```php
public function getMime(): string;
```

```php
public function getRealpath();
```

```php
public function getType(): int;
```

```php
public function getWidth(): int;
```

```php
public function liquidRescale( int $width, int $height, int $deltaX = int, int $rigidity = int ): AbstractAdapter;
```
This method scales the images using liquid rescaling method. Only support
Imagick

```php
public function mask( AdapterInterface $watermark ): AdapterInterface;
```
 Composite one image onto another

```php
public function pixelate( int $amount ): AdapterInterface;
```
 Pixelate image

```php
public function reflection( int $height, int $opacity = int, bool $fadeIn = bool ): AdapterInterface;
```
 Add a reflection to an image

```php
public function render( string $ext = null, int $quality = int ): string;
```
 Render the image and return the binary string

```php
public function resize( int $width = null, int $height = null, int $master = static-constant-access ): AdapterInterface;
```
 Resize the image to the given size

```php
public function rotate( int $degrees ): AdapterInterface;
```
 Rotate the image by a given amount

```php
public function save( string $file = null, int $quality = int ): AdapterInterface;
```
 Save the image

```php
public function sharpen( int $amount ): AdapterInterface;
```
 Sharpen the image by a given amount

```php
public function text( string $text, mixed $offsetX = bool, mixed $offsetY = bool, int $opacity = int, string $color = string, int $size = int, string $fontfile = null ): AdapterInterface;
```
 Add a text to an image with a specified opacity

```php
public function watermark( AdapterInterface $watermark, int $offsetX = int, int $offsetY = int, int $opacity = int ): AdapterInterface;
```
 Add a watermark to an image with the specified opacity

## Image\Adapter\AdapterInterface ![Interface](/assets/images/interface-blue.svg) 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Adapter/AdapterInterface.zep)

-   __Namespace__

    - `Phalcon\Image\Adapter`

-   __Uses__

    - `Phalcon\Image\Enum`

-   __Extends__

-   __Implements__

Interface for Phalcon\Image\Adapter classes

### Methods

```php
public function background( string $color, int $opacity = int ): AdapterInterface;
```

```php
public function blur( int $radius ): AdapterInterface;
```

```php
public function crop( int $width, int $height, int $offsetX = null, int $offsetY = null ): AdapterInterface;
```

```php
public function flip( int $direction ): AdapterInterface;
```

```php
public function mask( AdapterInterface $watermark ): AdapterInterface;
```

```php
public function pixelate( int $amount ): AdapterInterface;
```

```php
public function reflection( int $height, int $opacity = int, bool $fadeIn = bool ): AdapterInterface;
```

```php
public function render( string $ext = null, int $quality = int ): string;
```

```php
public function resize( int $width = null, int $height = null, int $master = static-constant-access ): AdapterInterface;
```

```php
public function rotate( int $degrees ): AdapterInterface;
```

```php
public function save( string $file = null, int $quality = int ): AdapterInterface;
```

```php
public function sharpen( int $amount ): AdapterInterface;
```

```php
public function text( string $text, int $offsetX = int, int $offsetY = int, int $opacity = int, string $color = string, int $size = int, string $fontfile = null ): AdapterInterface;
```

```php
public function watermark( AdapterInterface $watermark, int $offsetX = int, int $offsetY = int, int $opacity = int ): AdapterInterface;
```

## Image\Adapter\Gd 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Adapter/Gd.zep)

-   __Namespace__

    - `Phalcon\Image\Adapter`

-   __Uses__

    - `Phalcon\Image\Enum`
    - `Phalcon\Image\Exception`

-   __Extends__

    `AbstractAdapter`

-   __Implements__

This file is part of the Phalcon Framework.

(c) Phalcon Team &lt;team@phalcon.io>

For the full copyright and license information, please view the LICENSE.txt
file that was distributed with this source code.

## Properties
```php
//
protected $static $checked = false;

```

### Methods

```php
public function __construct( string $file, int $width = null, int $height = null );
```

```php
public function __destruct();
```

```php
public static function check(): bool;
```

```php
public static function getVersion(): string;
```

```php
protected function processBackground( int $r, int $g, int $b, int $opacity );
```

```php
protected function processBlur( int $radius );
```

```php
protected function processCreate( int $width, int $height );
```

```php
protected function processCrop( int $width, int $height, int $offsetX, int $offsetY );
```

```php
protected function processFlip( int $direction );
```

```php
protected function processMask( AdapterInterface $mask );
```

```php
protected function processPixelate( int $amount );
```

```php
protected function processReflection( int $height, int $opacity, bool $fadeIn );
```

```php
protected function processRender( string $ext, int $quality );
```

```php
protected function processResize( int $width, int $height );
```

```php
protected function processRotate( int $degrees );
```

```php
protected function processSave( string $file, int $quality );
```

```php
protected function processSharpen( int $amount );
```

```php
protected function processText( string $text, int $offsetX, int $offsetY, int $opacity, int $r, int $g, int $b, int $size, string $fontfile );
```

```php
protected function processWatermark( AdapterInterface $watermark, int $offsetX, int $offsetY, int $opacity );
```

## Image\Adapter\Imagick 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Adapter/Imagick.zep)

-   __Namespace__

    - `Phalcon\Image\Adapter`

-   __Uses__

    - `Imagick`
    - `ImagickDraw`
    - `ImagickDrawException`
    - `ImagickException`
    - `ImagickPixel`
    - `ImagickPixelException`
    - `Phalcon\Image\Enum`
    - `Phalcon\Image\Exception`

-   __Extends__

    `AbstractAdapter`

-   __Implements__

Phalcon\Image\Adapter\Imagick

Image manipulation support. Allows images to be resized, cropped, etc.

```php
$image = new \Phalcon\Image\Adapter\Imagick("upload/test.jpg");

$image->resize(200, 200)->rotate(90)->crop(100, 100);

if ($image->save()) {
echo "success";

}
```

### Properties
```php
//
protected $static $checked = false;

//
protected $static $version = 0;

```

### Methods

```php
public function __construct( string $file, int $width = null, int $height = null );
```
\Phalcon\Image\Adapter\Imagick constructor

```php
public function __destruct();
```
Destroys the loaded image to free up resources.

```php
public static function check(): bool;
```
Checks if Imagick is enabled

```php
public function getInternalImInstance(): \Imagick;
```
Get instance

```php
public function setResourceLimit( int $type, int $limit );
```
Sets the limit for a particular resource in megabytes

@link https://php.net/manual/ru/imagick.constants.php#imagick.constants.resourcetypes

```php
protected function processBackground( int $r, int $g, int $b, int $opacity );
```
Execute a background.

```php
protected function processBlur( int $radius );
```
Blur image

```php
protected function processCrop( int $width, int $height, int $offsetX, int $offsetY );
```
Execute a crop.

```php
protected function processFlip( int $direction );
```
Execute a flip.

```php
protected function processLiquidRescale( int $width, int $height, int $deltaX, int $rigidity );
```
This method scales the images using liquid rescaling method. Only support
Imagick

```php
protected function processMask( AdapterInterface $image );
```
Composite one image onto another

```php
protected function processPixelate( int $amount );
```
Pixelate image

```php
protected function processReflection( int $height, int $opacity, bool $fadeIn );
```
Execute a reflection.

```php
protected function processRender( string $extension, int $quality ): string;
```
Execute a render.

```php
protected function processResize( int $width, int $height );
```
Execute a resize.

```php
protected function processRotate( int $degrees );
```
Execute a rotation.

```php
protected function processSave( string $file, int $quality );
```
Execute a save.

```php
protected function processSharpen( int $amount );
```
Execute a sharpen.

```php
protected function processText( string $text, mixed $offsetX, mixed $offsetY, int $opacity, int $r, int $g, int $b, int $size, string $fontfile );
```
Execute a text

```php
protected function processWatermark( AdapterInterface $image, int $offsetX, int $offsetY, int $opacity );
```
Execute a watermarking.

## Image\Enum 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Enum.zep)

-   __Namespace__

    - `Phalcon\Image`

-   __Uses__

-   __Extends__

-   __Implements__

This file is part of the Phalcon Framework.

(c) Phalcon Team &lt;team@phalcon.io>

For the full copyright and license information, please view the LICENSE.txt
file that was distributed with this source code.

### Constants
```php
const AUTO = 4;
const HEIGHT = 3;
const HORIZONTAL = 11;
const INVERSE = 5;
const NONE = 1;
const PRECISE = 6;
const TENSILE = 7;
const VERTICAL = 12;
const WIDTH = 2;
```

## Image\Exception 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/Exception.zep)

-   __Namespace__

    - `Phalcon\Image`

-   __Uses__

-   __Extends__

    `\Exception`

-   __Implements__

Exceptions thrown in Phalcon\Image will use this class

## Image\ImageFactory 

[Source on GitHub](https://github.com/phalcon/cphalcon/blob/4.2.x/phalcon/Image/ImageFactory.zep)

-   __Namespace__

    - `Phalcon\Image`

-   __Uses__

    - `Phalcon\Factory\AbstractFactory`
    - `Phalcon\Image\Adapter\AdapterInterface`

-   __Extends__

    `AbstractFactory`

-   __Implements__

Phalcon\Image/ImageFactory

### Methods

```php
public function __construct( array $services = [] );
```
Constructor

```php
public function load( mixed $config ): AdapterInterface;
```
Factory to create an instance from a Config object

```php
public function newInstance( string $name, string $file, int $width = null, int $height = null ): AdapterInterface;
```
Creates a new instance

```php
protected function getAdapters(): array;
```

Source: https://docs.phalcon.io/4.2/api/phalcon_image/index.mdx
